--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ fqdn==1.5.1
 fsspec==2024.2.0
 gitdb==4.0.11
 GitPython==3.1.43
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -113,6 +114,7 @@ tenacity==9.0.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
+torch==2.5.1
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
