--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 annotated-types==0.7.0
 anyio==4.8.0
+certifi==2025.1.31
 click==8.1.8
 fastapi==0.115.11
 gunicorn==23.0.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 packaging==24.2
 pydantic==2.10.6
